# substrukt

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ci  NOTES.md  README.md  build.rs  claude-project-instructions.md  dist-workspace.toml  flake.nix  justfile  llms.txt  plan.md  sqlx.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: publish-docker.yml  release.yml  website.yml
audit_migrations/: 001_create_audit_log.sql  002_create_webhook_state.sql
docs/plans/: sk-01.md  sk-02.md  sk-03.md  sk-04.md  sk-05-06.md  sk-07.md
docs/specs/: sk-01-design.md  sk-02-design.md  sk-03-design.md  sk-04-design.md  sk-05-06-design.md  sk-07-design.md
docs/superpowers/plans/: 2026-03-12-schema-editor-uploads-browser.md  2026-03-12-singles.md  2026-04-27-website-redesign.md
docs/superpowers/specs/: 2026-03-12-schema-editor-uploads-browser-design.md  2026-03-12-singles-design.md  2026-04-10-markdown-richtext-design.md  2026-04-24-wavefunk-ui-migration-design.md  2026-04-27-website-redesign-design.md
editor/: milkdown-editor.js  milkdown-theme.css  package-lock.json  package.json
migrations/: 007_add_focal_point.sql
src/: app_context.rs  audit.rs  backup.rs  cache.rs  config.rs  email.rs  history.rs  lib.rs  main.rs  metrics.rs  openapi.rs  rate_limit.rs  state.rs  templates.rs
src/auth/: mod.rs  token.rs
src/content/: form.rs  mod.rs
src/db/: migration.rs  mod.rs
src/routes/: api.rs  apps.rs  auth.rs  content.rs  deployments.rs  mod.rs  publish.rs  schemas.rs  settings.rs  uploads.rs
src/schema/: mod.rs  models.rs
src/sync/: mod.rs
src/uploads/: mod.rs
static/css/: 01-tokens.css  02-base.css  03-layout.css  04-components.css  05-utilities.css  milkdown-theme.css  substrukt.css
static/js/: milkdown-editor.bundle.js
templates/: _nav.html  _partial.html  base.html  dashboard.html  error.html  forgot_password.html  login.html  reset_password.html  setup.html  signup.html  verify_pending.html  verify_result.html
templates/apps/: data.html  list.html  new.html  settings.html
templates/content/: _status_control.html  diff.html  edit.html  history.html  list.html
templates/deployments/: form.html  list.html
templates/schemas/: edit.html  list.html
templates/settings/: audit_log.html  backups.html  profile.html  tokens.html  users.html
templates/uploads/: list.html
tests/: integration.rs
website/: index.html  site.toml
website/_data/: features.yaml  how-it-works.yaml  nav.yaml
website/_data/docs/: api-authentication.yaml  api-content.yaml  api-publish.yaml  api-schemas.yaml  api-sync.yaml  api-uploads.yaml  architecture.yaml  configuration.yaml  content-management.yaml  data-directory.yaml  deployment.yaml  field-types.yaml  getting-started.yaml  import-export.yaml  observability.yaml  schemas.yaml  security.yaml  single-vs-collection.yaml  storage-modes.yaml  uploads.yaml  webhooks.yaml
website/docs/: api-content.md  api-uploads.md  configuration.md  field-types.md  getting-started.md  observability.md  security.md
website/static/css/: substrukt.css
website/templates/: _base.html  _docs.html  _marketing.html  index.html
website/templates/_partials/: docs-sidebar.html  footer.html  nav.html
website/templates/docs/: api-authentication.html  (+20 more)
(+4 files in other folders)
