[package]
name = "substrukt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-htmx = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
minijinja = { version = "2.15", features = ["loader"] }
minijinja-autoreload = "2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slug = "0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["catch-panic", "fs", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
jsonschema = "0.28"
argon2 = "0.5"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tar = "0.4"
flate2 = "1.0"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
rand = "0.9"
tower = "0.5"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["cookies", "multipart"] }
