[package]
name = "substrukt"
version = "0.13.0"
edition = "2024"
repository = "https://github.com/wavefunk/substrukt"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-htmx = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
minijinja = { version = "2.15", features = ["loader", "json"] }
minijinja-autoreload = "2"
minijinja-embed = "2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
slug = "0.1"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["catch-panic", "fs", "limit", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono", "derive", "sqlx-toml"] }
jsonschema = "0.28"
tower-sessions = "0.14"
allowthem-core = { path = "../allowthem/crates/core" }
tar = "0.4"
flate2 = "1.0"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
indexmap = "2"
rand = "0.9"
tower = "0.5"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }

[build-dependencies]
minijinja-embed = "2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["cookies", "multipart"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
